# testing

./: .gitignore  .replit  LOGIN_FIX_SUMMARY.md  app.py  canteen.json  clubs.json  data.json  email_service.py  events.json  hostels.json  init_db.py  models.py  places.json  pyproject.toml  replit.md  reports.json  requirements.txt  transportation.json
attached_assets/: Pasted--PROJECT-TYPE-Full-stack-web-app-HTML-CSS-JS-and-JSON-based-backend-DATA-FILE-data--1750837944115_1750837944117.txt  Pasted-1-Implement-global-search-functionality-Add-a-Search-All-Files-bar-on-the-main-landing-p-1750430727635_1750430727636.txt  Pasted-Add-Like-and-Dislike-buttons-under-each-file-Store-values-in-data-json-like-likes-0--1750837963299_1750837963299.txt  Pasted-Add-Like-and-Dislike-buttons-under-each-file-Store-values-in-data-json-like-likes-0--1750838014899_1750838014899.txt  Pasted-Add-a-new-page-called-Upcoming-Events-to-the-SSN-College-Materials-PYQs-website-Place-this-on-t-1751304515377_1751304515380.txt
static/js/: main.js
templates/: add_club.html  admin_dashboard.html  base.html  bus_routes.html  campus_places.html  canteen.html  category.html  clubs.html  file_detail.html  guest_login.html  hostel_info.html  index.html  manage_uploads.html  quick_login.html  upcoming_events.html  upload.html  upload_service.html  upload_service_verify.html  verify_otp.html  verify_ssn_email.html
templates/admin/: reported_files.html  verify_files.html
templates/syllabus/: regulation.html
