[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "flask-login>=0.6.0",
    "flask-mail>=0.9.1",
    "flask-wtf>=1.1.0",
    "gunicorn>=23.0.0",
    "sqlalchemy>=2.0.41",
    "psycopg2-binary>=2.9.10",
    "werkzeug>=3.1.3",
    "email-validator>=2.2.0",
    "numpy>=2.2.6",
    "matplotlib>=3.10.3",
    "pillow>=11.2.1",
    "openai>=1.82.0",
    "oauthlib>=3.2.0",
    "requests>=2.31.0",
]
